écriture  des trajets avec toutes leurs informations dans un fichier .txt lors de la création de l'objet
+correction de plusieurs(nombreux) bugs de compilation

--- a/SmartOrderManager/CMakeLists.txt
+++ b/SmartOrderManager/CMakeLists.txt
@@ -29,6 +29,7 @@ set(PROJECT_SOURCES
         trajet.h
         colis.h
         colis.cpp
+        Trajet.txt
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
